done and running

--- a/todo.html
+++ b/todo.html
@@ -1,24 +1,62 @@
+<!DOCTYPE html>
 <html>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+
 <head>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js">
+<title>To-Do List</title>
+
+<style type='text/css'>
+
+li {
+    border: 1px solid #ccc;
+    margin-bottom:3px;
+    padding: 2px 5px;
+}
+
+button {
+    margin-left: 10px
+}
+
+ul {list-style-type: none;}
+
+</style>
+
+
+<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+
+<script type='text/javascript'>
+
+<!-- More & better css styling would make button to-dos look nicer -->
+$(function(){
 $('#btnName').click(function(){
-    //var text = $('#inputName').val() + '<button>x</button>';
-    $('#todo').append('<li />' + $('inputname').val() + "</li />");
+    var text = '<button>' + $('#inputName').val() + '</button>';
+    if(text.length){
+        $('<li />', {html: text}).appendTo('ul.justList')
+    }
 });
 
 $('ul').on('click','button' , function(el){
     $(this).parent().remove()
 });
+});
+
 </script>
+
 </head>
 
+
 <body>
-<p>New to-do: 
+
+<p>Add to the list?</p>
+<p>
 <input type="test" id="inputName" />
-<button id="btnName">Add</button>
+<button id="btnName">Add task</button>
 </p>
 
-<p><ul class="todo"></ul></p>
+<ul class="justList"></ul>
+
 
 </body>
+
 </html>
